Kubedev/aula-cert-manager/ingress-route-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tls
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`teclinux.tk`)
    kind: Rule
    services: 
    - name: nginx-service
      port: 80 
  tls:
    secretName: teclinux-tk-secret
