Kubedev/aula-cert-manager/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`teclinux.tk`)
    kind: Rule
    services: 
    - name: nginx-service
      port: 80
